frontend/src/Components/navbar/navbar.scss
.navbarContainer {
  height: 50px;
  width: 100%;
  background-color: #0e213f;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbarLeft {
  height: 50px;
  margin-left: 20px;
  display: flex;
  align-items: center;
}
.navbarRight {
  display: flex;
  justify-content: flex-end;
  margin-right: 10px;
  align-items: center;
  color: white;
}
.navbarLink {
  padding: 1rem;
  cursor: pointer;
  @media screen and (max-width: 424px) {
    display: none;
  }
}
.navbarLinkMobile {
  padding: 0 1rem;
  cursor: pointer;
  @media screen and (min-width: 425px) {
    display: none;
  }
}

.hamburger-react {
  &:focus + .hamburgerMenu {
    animation: slidein 300ms ease-in-out both;
  }
}

.hamburgerMenu {
  position: absolute;
  right: 0px;
  top: 50px;
  border-top: 1px solid rgb(255, 255, 255);
  background-color: #0e213f;
  box-shadow: -1px 2px 5px 0 #0e213f;
  visibility: hidden;
  transform: translateY(-110%);
  &Links {
    cursor: pointer;
    font-size: 16px;
    padding: 10px;
    margin: 0;
  }
}
.navbarIcon svg {
  width: 32px;
  height: 32px;
  cursor: pointer;
}
.logo {
  width: 100%;
  height: 32px;
  object-fit: cover;
}
.profilePicture {
  width: 32px;
  height: 32px;
  object-fit: cover;
  border-radius: 50%;
  cursor: pointer;
}

// Hamburger menu's animation
@keyframes slidein {
  from {
    transform: translateY(-110%);
    opacity: 0;
    visibility: hidden;
  }
  50% {
    opacity: 0;
    visibility: visible;
  }
  to {
    transform: translateY(0%);
    opacity: 100%;
    visibility: visible;
  }
}

